# lunch_menu

./: .README.md.swp  App.py  App.py.ing  Main.py  README.md  env.dummy  pyproject.toml
note/: crud.ipynb  endpoint.ipynb  kwargs.ipynb  lucnch_menu.ipynb  melt.ipynb  pandasql.ipynb
pages/: 1_Input.py  2_Check.py  3_Statistics.py  4_Chart.py  5_bulk_insert.py  6_Not_input.py  7_Record_time.py  8_age_cal.py  9_Sync.py  9_old.py
src/lunch_menu/: constants.py  db.py
